--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                 <p>Hollister, NC 27844</p>
                                 <form action="https://formspree.io/richardson.webdev@gmail.com" method="POST">
                                     <input type="hidden" name="_subject" value="Wedding RSVP" />
-                                    <input type="hidden" name="_next" value="thanks.html" />
+                                    <input type="hidden" name="_next" value="./thanks.html" />
                                     <input type="text" class="form-control" name="name" placeholder="Name" required>
                                     <input type="number" class="form-control" name="guest" placeholder="# of Guests" required>
                                     <button type="submit" class="rsvp-button" title="RSVP Now">Send RSVP</button>
