--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <section id="rsvp-form">
                                 <form action="https://formspree.io/richardson.webdev@gmail.com" method="POST">
                                     <input type="hidden" name="_subject" value="Wedding RSVP" />
-                                    <input type="hidden" name="_next" value="rsvp/thanks.html" />
+                                    <input type="hidden" name="_next" value="thanks.html" />
                                     <input type="text" class="form-control" name="name" placeholder="Name" required>
                                     <input type="email" name="Email" class="form-control" placeholder="Email">
                                     <input type="number" class="form-control" name="guest" placeholder="# of Guests" required>
