--- a/thanks.html
+++ b/thanks.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Thanks | Mayu Matt Wedding RSVP</title>
+    <title>Mayu Matt Wedding RSVP</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>Thanks, we look forward to seeing you!</h1>
+
+<body class="preload">
+    <div class="grid">
+        <div class="column-xs-12">
+            <div class="container center">
+                <p>Thanks!</p>
+                <p>We look forward to seeing you!</p>
+            </div>
+        </div>
+    </div>
+    <script src="index.js"></script>
 </body>
+
 </html>
