--- a/thanks.html
+++ b/thanks.html
@@ -9,12 +9,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="preload">
+<body class="preload thanks">
     <div class="grid">
         <div class="column-xs-12">
             <div class="container center">
-                <p>Thanks!</p>
-                <p>We look forward to seeing you!</p>
+                <div class="content">
+                    <h1>Thanks!</h1>
+                    <p>We look forward to seeing you!</p>
+                    <p class="quote">
+                        <em>“The flower that blooms in adversity is the rarest and most beautiful of all.”<br><br>- Mulan</em>
+                    </p>
+                </div>
             </div>
         </div>
     </div>
