--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                                 <p>Thursday, August 4, 2018</p>
                                 <p>4531 NC-43</p>
                                 <p>Hollister, NC 27844</p>
+                                <div class="registry">
+                                    <a href="registry.html">Registry Details</a>
+                                </div>
                                 <button type="button" class="rsvp-button" id="btnRSVP" title="RSVP Now">RSVP Now</button>
                             </section>
                             <section id="rsvp-form">
