--- a/thanks.html
+++ b/thanks.html
@@ -16,6 +16,7 @@
                 <div class="content">
                     <h1>Thanks!</h1>
                     <p>We look forward to seeing you!</p>
+                    <p class="thanks-reg"><a href="https://www.target.com/gift-registry/giftgiver?registryId=d003a9edea58432e844928c0d725164b">Registry Details</a></p>
                     <p class="quote">
                         <em>“The flower that blooms in adversity is the rarest and most beautiful of all.”<br><br>- Mulan</em>
                     </p>
